3.10.1
======
Apr 6, 2022
- Add duration to `Ignored` status and render ignored stepdef links in grey

3.10.0
======
Apr 6, 2022
- Introduced `@Try` annotation and `Ignored` status
  - Steps annotated with `@Try` that fail will be reported as `Ignored`
- Fix: Accept blank arguments into JS function application bindings

3.9.1
=====
Apr 5, 2022
- JS function application binding without delimiter takes single argument only
  - `<name> is defined by <javascriptRef> applied to "<argument>"`

3.9.0
=====
Apr 5, 2022
- JS function application bindings
  - `<name> is defined by <javascriptRef> applied to "<arguments>"`
  - `<name> is defined by <javascriptRef> applied to "<arguments>" delimited by "<delimiter>"`

3.8.1
=====
Apr 4, 2022
- Fix `@Lazy` bindings for if conditions

3.8.0
=====
Apr 3, 2022
- Introduce `@Eager` and `@Lazy` annotations for `X defined by Y` DSL steps
  - `@Eager` evaluates Y on the spot and assigns the value to X for subsequent reuse
  - `@Lazy` evaluates Y when referenced the first time and assigns the value to X for subsequent reuse
  - Neither (the default) evaluates Y when referenced every time and assigns the value to X for one-time use
- Refactor: renamed ReservedTags to Annotations
- Parse out custom assert messages so they do not appear in reported step output
- Introduce `@Message("msg")` annotation for custom assertion messages in addition to `: "msg"` notation
  - Example: 
    - Without custom message (the standard assertion message will be reported if assertion fails): 
      - `Then x should be y`
    - With custom message: 
      - `Then x should be y  @Message("This custom message will be reported if assertion fails")` (new approach)
      - or `Then x should be y: "This custom message will be reported if assertion fails"` (old approach)

3.7.3
=====
Mar 31, 2022
- Update dependencies to eliminate transitive vulnerabilities:
  - Update tika-core from v1.22 to v1.26
  - Update guava from v29.0-jre to v31.1-jre

3.7.2
=====